# pdfdelta

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: generate_demo.py
src/pdfcompare/: __init__.py  cli.py  extract.py
src/pdfdelta/: __init__.py  annotate.py  cli.py  compare.py  models.py
